Fix source icon alignment

--- a/packages/@uppy/dashboard/src/style.scss
+++ b/packages/@uppy/dashboard/src/style.scss
@@ -715,7 +715,7 @@ a.uppy-Dashboard-poweredBy {
   overflow: hidden;
   fill: currentColor;
   width: 11px;
-  height: 11px;
+  height: 12px;
 }
 
 .uppy-DashboardItem-previewInnerWrap {
